Начало разработки сайта

--- a/html.html
+++ b/html.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body class="content">
-    <p>Первый текст <br> на сайте</p>
+    <p>Первый текст на сайте, <br> с переносом строки</p>
 </body>
 </html>
